--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,9 @@ repositories {
 }
 
 dependencies {
+	implementation('org.codehaus.groovy:groovy-all:3.0.9')
 //	Tomcat8/9
-//	implementation('javax.servlet:javax.servlet-api:4.0.1')
+	implementation('javax.servlet:javax.servlet-api:4.0.1')
 //	Tomcat10
 	implementation('jakarta.servlet:jakarta.servlet-api:5.0.0')
 	implementation('com.google.code.gson:gson:2.8.9')
